--- a/index.html
+++ b/index.html
@@ -48,8 +48,99 @@
                     </div> -->
                 </div>
                 <!-- Image -->
-                <div class="md:w1/2">
+                <div class="md:w-1/2">
                     <img src="images/coffee_transparent_maybe.png" alt="" />
+                </div>
+            </div>
+        </section>
+
+        <!-- Feature Section -->
+        <section id="features">
+            <!-- Flex Container -->
+            <div class="container flex flex-col px-4 mx-auto mt-10 space-y-12 md:space-y-0 md:flex-row">
+                <!-- Whats Different -->
+                <div class="flex flex-col space-y-12 md:w-1/2">
+                    <h2 class="max-w-md text-4xl font-bold text-center md:text-left">
+                        Text Text Text Text Text Text Text Text Text Text 
+                    </h2>
+                    <p class="max-w-sm text-center text-darkGrayishBlue md:text-left">
+                        More Text More Text More Text More Text More Text More Text More Text More Text More Text More Text  
+                    </p>
+                </div>
+
+                <!-- Numbered List -->
+                <div class="flex flex-col space-y-8 md:w-1/2">
+                    <!-- List Item #1 -->
+                    <div class="flex flex-col space-y-3 md:space-y-0 md:space-x-6 md:flex-row">
+                        <!-- Heading -->
+                        <div class="rounded-l-full bg-brightRedSupLight md:bg-transparent">
+                            <div class="flex items-center space-x-2">
+                                <div class="px-4 py-2 text-white rounded-full md:py-1 bg-brightRed">
+                                    Heading
+                                </div>
+                                <h3 class="text-base font-bold md:mb-4 md:hidden">
+                                    Text after header
+                                </h3>
+                            </div>
+                        </div>
+
+                        <div>
+                            <h3 class="hidden mb-4 text-lg font-bold md:block">
+                                Text after Header
+                            </h3>
+                            <p class="text-darkGreyishBlue">
+                                Text again
+                            </p>
+                        </div>
+                    </div>
+
+                    <!-- List Item #2 -->
+                    <div class="flex flex-col space-y-3 md:space-y-0 md:space-x-6 md:flex-row">
+                        <!-- Heading -->
+                        <div class="rounded-l-full bg-brightRedSupLight md:bg-transparent">
+                            <div class="flex items-center space-x-2">
+                                <div class="px-4 py-2 text-white rounded-full md:py-1 bg-brightRed">
+                                    Heading
+                                </div>
+                                <h3 class="text-base font-bold md:mb-4 md:hidden">
+                                    Text after header
+                                </h3>
+                            </div>
+                        </div>
+
+                        <div>
+                            <h3 class="hidden mb-4 text-lg font-bold md:block">
+                                Text after Header
+                            </h3>
+                            <p class="text-darkGreyishBlue">
+                                Text again
+                            </p>
+                        </div>
+                    </div>
+
+                    <!-- List Item #3 -->
+                    <div class="flex flex-col space-y-3 md:space-y-0 md:space-x-6 md:flex-row">
+                        <!-- Heading -->
+                        <div class="rounded-l-full bg-brightRedSupLight md:bg-transparent">
+                            <div class="flex items-center space-x-2">
+                                <div class="px-4 py-2 text-white rounded-full md:py-1 bg-brightRed">
+                                    Heading
+                                </div>
+                                <h3 class="text-base font-bold md:mb-4 md:hidden">
+                                    Text after header
+                                </h3>
+                            </div>
+                        </div>
+
+                        <div>
+                            <h3 class="hidden mb-4 text-lg font-bold md:block">
+                                Text after Header
+                            </h3>
+                            <p class="text-darkGreyishBlue">
+                                Text again
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
