--- a/index.html
+++ b/index.html
@@ -144,5 +144,46 @@
                 </div>
             </div>
         </section>
+
+        <!-- Testimonials -->
+        <section id="testimonials">
+            <!-- container to heading and Testimonial Blocks -->
+            <div class="max-w-6xl px-5 mx-auto mt-32 text-center">
+                <!-- Heading -->
+                <h2 class="text-4xl font-bold text-center">
+                    Testimonials
+                </h2>
+                <!-- Testimonials Container -->
+                <div class="flex flex-col mt-24 md:flex-row md:space-x-6">
+                    <!-- Testimonial 1 -->
+                    <div class="flex flex-col items-center pd-6 space-y-3 rounded-lg bg-veryLightGray md:w-1/3">
+                        <img src="images/blank-picture-holder.png" class="w-16 -mt-14 rounded-full" alt="">
+                        <h5 class="text-lg font-bold">Leslie F.</h5>
+                        <h4 class="text-md">Memphis, TN</h4>
+                        <p class="text-sm text-darkGrayishBlue">
+                            Been going to Barksdale for years! Always great! Service is Down Home as servers are Great and fun to talk with!! <br /> **5/2/2022 via Yelp**
+                        </p>
+                    </div>
+                    <!-- Testimonial 2 -->
+                    <div class="hidden flex-col items-center pd-6 space-y-3 rounded-lg bg-veryLightGray md:flex md:w-1/3">
+                        <img src="images/blank-picture-holder.png" class="w-16 -mt-14 rounded-full" alt="">
+                        <h5 class="text-lg font-bold">Angie W.</h5>
+                        <h4 class="text-md">Poplar Bluff, MO</h4>
+                        <p class="text-sm text-darkGrayishBlue">
+                            This place was so good! The people were exceptionally friendly and welcoming. I love coming to locally owned places. Lunch special for 10 bucks, and amazing from scratch homemade meringue pies <br /> **9/27/22 via Tripadvisor**
+                        </p>
+                    </div>
+                    <!-- Testimonial 3 -->
+                    <div class="hidden flex-col items-center pd-6 space-y-3 rounded-lg bg-veryLightGray md:flex md:w-1/3">
+                        <img src="images/blank-picture-holder.png" class="w-16 -mt-14 rounded-full" alt="">
+                        <h5 class="text-lg font-bold">Nicole P.</h5>
+                        <h4 class="text-md">Kingsport, TN</h4>
+                        <p class="text-sm text-darkGrayishBlue">
+                            Always a treat to eat here when we are in town. The Greek omelet was delicious, as were the grits. Super friendly service, very fast and reasonably priced. <br /> **5/2/2022 via Yelp**
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
