--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <img src="images/logo.png" alt="" />
                 </div>
                 <!-- Menu Items -->
-                <div class="hidden md:flex space-x-6 text-orange-500 font-bold">
+                <div class="hidden md:flex space-x-6 text-volsOrange font-bold">
                     <a href="#" class="hover:text-darkGrayishBlue">Home</a>
                     <a href="#" class="hover:text-darkGrayishBlue">About Us</a>
                     <a href="#" class="hover:text-darkGrayishBlue">Menu</a>
@@ -75,7 +75,7 @@
                         <!-- Heading -->
                         <div class="rounded-l-full bg-brightRedSupLight md:bg-transparent">
                             <div class="flex items-center space-x-2">
-                                <div class="px-4 py-2 text-white rounded-full md:py-1 bg-brightRed">
+                                <div class="px-4 py-2 text-white rounded-full md:py-1 bg-volsOrange">
                                     Heading
                                 </div>
                                 <h3 class="text-base font-bold md:mb-4 md:hidden">
@@ -88,7 +88,7 @@
                             <h3 class="hidden mb-4 text-lg font-bold md:block">
                                 Text after Header
                             </h3>
-                            <p class="text-darkGreyishBlue">
+                            <p class="text-darkGrayishBlue">
                                 Text again
                             </p>
                         </div>
@@ -99,7 +99,7 @@
                         <!-- Heading -->
                         <div class="rounded-l-full bg-brightRedSupLight md:bg-transparent">
                             <div class="flex items-center space-x-2">
-                                <div class="px-4 py-2 text-white rounded-full md:py-1 bg-brightRed">
+                                <div class="px-4 py-2 text-white rounded-full md:py-1 bg-volsOrange">
                                     Heading
                                 </div>
                                 <h3 class="text-base font-bold md:mb-4 md:hidden">
@@ -112,7 +112,7 @@
                             <h3 class="hidden mb-4 text-lg font-bold md:block">
                                 Text after Header
                             </h3>
-                            <p class="text-darkGreyishBlue">
+                            <p class="text-darkGrayishBlue">
                                 Text again
                             </p>
                         </div>
@@ -123,7 +123,7 @@
                         <!-- Heading -->
                         <div class="rounded-l-full bg-brightRedSupLight md:bg-transparent">
                             <div class="flex items-center space-x-2">
-                                <div class="px-4 py-2 text-white rounded-full md:py-1 bg-brightRed">
+                                <div class="px-4 py-2 text-white rounded-full md:py-1 bg-volsOrange">
                                     Heading
                                 </div>
                                 <h3 class="text-base font-bold md:mb-4 md:hidden">
@@ -136,7 +136,7 @@
                             <h3 class="hidden mb-4 text-lg font-bold md:block">
                                 Text after Header
                             </h3>
-                            <p class="text-darkGreyishBlue">
+                            <p class="text-darkGrayishBlue">
                                 Text again
                             </p>
                         </div>
@@ -150,7 +150,7 @@
             <!-- container to heading and Testimonial Blocks -->
             <div class="max-w-6xl px-5 mx-auto mt-32 text-center">
                 <!-- Heading -->
-                <h2 class="text-4xl font-bold text-center">
+                <h2 class="text-4xl font-bold text-center text-volsOrange">
                     Testimonials
                 </h2>
                 <!-- Testimonials Container -->
@@ -165,7 +165,7 @@
                         </p>
                     </div>
                     <!-- Testimonial 2 -->
-                    <div class="hidden flex-col items-center pd-6 space-y-3 rounded-lg bg-veryLightGray md:flex md:w-1/3">
+                    <div class="hidden flex-col items-center pd-6 space-y-3 rounded-lg bg-veryLightGray md:w-1/3 md:flex">
                         <img src="images/blank-picture-holder.png" class="w-16 -mt-14 rounded-full" alt="">
                         <h5 class="text-lg font-bold">Angie W.</h5>
                         <h4 class="text-md">Poplar Bluff, MO</h4>
@@ -174,7 +174,7 @@
                         </p>
                     </div>
                     <!-- Testimonial 3 -->
-                    <div class="hidden flex-col items-center pd-6 space-y-3 rounded-lg bg-veryLightGray md:flex md:w-1/3">
+                    <div class="hidden flex-col items-center pd-6 space-y-3 rounded-lg bg-veryLightGray md:w-1/3 md:flex">
                         <img src="images/blank-picture-holder.png" class="w-16 -mt-14 rounded-full" alt="">
                         <h5 class="text-lg font-bold">Nicole P.</h5>
                         <h4 class="text-md">Kingsport, TN</h4>
