--- a/index.html
+++ b/index.html
@@ -156,17 +156,17 @@
                 <!-- Testimonials Container -->
                 <div class="flex flex-col mt-24 md:flex-row md:space-x-6">
                     <!-- Testimonial 1 -->
-                    <div class="flex flex-col items-center pd-6 space-y-3 rounded-lg bg-veryLightGray md:w-1/3">
-                        <img src="images/blank-picture-holder.png" class="w-16 -mt-14 rounded-full" alt="">
+                    <div class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:w-1/3">
+                        <img src="images/blank-picture-holder.png" class="w-16 -mt-13 rounded-full" alt="">
                         <h5 class="text-lg font-bold">Leslie F.</h5>
                         <h4 class="text-md">Memphis, TN</h4>
                         <p class="text-sm text-darkGrayishBlue">
-                            Been going to Barksdale for years! Always great! Service is Down Home as servers are Great and fun to talk with!! <br /> **5/2/2022 via Yelp**
+                            Been going to Barksdale for years! Always great! Service is down home as servers are great and fun to talk with!! <br /> **5/2/2022 via Yelp**
                         </p>
                     </div>
                     <!-- Testimonial 2 -->
-                    <div class="hidden flex-col items-center pd-6 space-y-3 rounded-lg bg-veryLightGray md:w-1/3 md:flex">
-                        <img src="images/blank-picture-holder.png" class="w-16 -mt-14 rounded-full" alt="">
+                    <div class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:w-1/3">
+                        <img src="images/blank-picture-holder.png" class="w-16 -mt-13 rounded-full" alt="">
                         <h5 class="text-lg font-bold">Angie W.</h5>
                         <h4 class="text-md">Poplar Bluff, MO</h4>
                         <p class="text-sm text-darkGrayishBlue">
@@ -174,8 +174,8 @@
                         </p>
                     </div>
                     <!-- Testimonial 3 -->
-                    <div class="hidden flex-col items-center pd-6 space-y-3 rounded-lg bg-veryLightGray md:w-1/3 md:flex">
-                        <img src="images/blank-picture-holder.png" class="w-16 -mt-14 rounded-full" alt="">
+                    <div class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:w-1/3">
+                        <img src="images/blank-picture-holder.png" class="w-16 -mt-13 rounded-full" alt="">
                         <h5 class="text-lg font-bold">Nicole P.</h5>
                         <h4 class="text-md">Kingsport, TN</h4>
                         <p class="text-sm text-darkGrayishBlue">
